syntax = "proto3";

package proto;

service RoleService {
  rpc CreateRole (CreateRoleRequest) returns (Role);
  rpc GetRole (GetRoleRequest) returns (RoleResponse);
  rpc ListRoles (ListRolesRequest) returns (ListRolesResponse);
  rpc UpdateRole (UpdateRoleRequest) returns (RoleResponse);
  rpc DeleteRole (DeleteRoleRequest) returns (DeleteRoleResponse);
}

message CreateRoleRequest {
  string name = 1;
  repeated string permissions = 2;
  string oid = 3;
}

message GetRoleRequest {
  string rid = 1;
  string oid = 2;
}

message ListRolesRequest {
  int32 page = 1;
  int32 pageSize = 2;
  string oid = 3;
}

message UpdateRoleRequest {
  string rid = 1;
  repeated string permissions = 2;
  string oid = 3;
}

message DeleteRoleRequest {
  string rid = 1;
  string oid = 2;
}

message DeleteRoleResponse {
  bool success = 1;
}

message Role {
  string id = 1;
  string name = 2;
  repeated string permissions = 3;
  string oid = 4;
}

message ListRolesResponse {
  repeated Role roles = 1;
}

message RoleResponse {
  oneof result {
    Role role = 1;
    NotFound notfound = 2;
  }
}

message NotFound {
  // Optionally, provide additional information about why the Org wasn't found
  optional string reason = 1;
}

